--- a/lang/en.json
+++ b/lang/en.json
@@ -1323,14 +1323,11 @@
                 "attackTargetDoesNotExist": "The target token no longer exists",
                 "insufficentAdvancements": "You don't have enough advancements left.",
                 "noAssignedPlayerCharacter": "You have no assigned character.",
-                "noTokenSelected": "No token is selected",
+                "noSelectedToken": "You have no selected token",
                 "noSourceItem": "No source item found in chat message",
                 "sourceItemNotFound": "Source item not found",
-                "failedToCreateTemporaryItem": "Failed to create temporary item for action use",
                 "actionNotFound": "Action '{id}' not found on source item",
-                "actionTypeNotFound": "Action type '{type}' not found",
                 "actionUseFailed": "Failed to use action '{action}': {error}",
-                "actionNotAvailable": "This action is not available",
                 "onlyUseableByPC": "This can only be used with a PC token",
                 "dualityParsing": "Duality roll not properly formated",
                 "attributeFaulty": "The supplied Attribute doesn't exist",
